# textractor-media-bridge

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cache-warm.yml  release.yml
config/: bridge.example.toml
crates/bridge_protocol/: Cargo.toml
crates/bridge_protocol/src/: framing.rs  lib.rs  pipe_name.rs  types.rs
crates/textractor_bridge_dll/: Cargo.toml
crates/textractor_bridge_dll/src/: lib.rs  sentence_info.rs
crates/textractor_bridge_server/: Cargo.toml  build.rs
crates/textractor_bridge_server/src/: assets.rs  config.rs  history.rs  http.rs  main.rs  pipe.rs  state.rs  time.rs  tray.rs  websocket.rs
crates/textractor_bridge_server/src/media/: audio.rs  mod.rs  screenshot.rs  window.rs
crates/textractor_bridge_server/src/media/audio/: activity.rs  wav.rs
crates/textractor_bridge_server/src/state/: audio.rs  cleanup.rs  lines.rs  mining.rs  screenshots.rs
docs/: ARCHITECTURE.md  BUILDING.md  DEVELOPMENT.md  INSTALLATION.md
scripts/: install-x86.ps1  package-release.ps1
web_ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web_ui/public/: manifest.webmanifest  service-worker.js
web_ui/src/: App.vue  main.ts
web_ui/src/api/: ankiConnect.ts  bridge.ts  types.ts
web_ui/src/components/: AudioTrimModal.vue  LineTranscript.vue  MediaPreviewModal.vue  ReaderView.vue  SelectionBar.vue  SettingsModal.vue  ToastStack.vue  TooltipButton.vue
web_ui/src/composables/: useAnkiMining.ts  useBridgeLines.ts  useMiningSelection.ts  useToast.ts  useTrimRangeDrag.ts
web_ui/src/lib/: audioSettings.ts  audioTrimLoader.ts  htmlTags.ts  minerSettings.ts  textFilters.ts  wavPreview.ts
web_ui/src/styles/: app.css
