[package]
name = "textractor_bridge_dll"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bridge_protocol = { path = "../bridge_protocol" }
crossbeam-channel.workspace = true
serde_json.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

